Fixed issue with a flex gap in an older version of Safari.

--- a/packages/mural-picker/src/components/create-new-mural/styles.scss
+++ b/packages/mural-picker/src/components/create-new-mural/styles.scss
@@ -161,3 +161,7 @@
     }
   }
 }
+
+.new-mural-items .template-item {
+  margin: 0.5em;
+}
