--- a/packages/mural-picker/src/components/mural-list/styles.scss
+++ b/packages/mural-picker/src/components/mural-list/styles.scss
@@ -12,8 +12,8 @@
       margin-top: 1em;
     }
 
-    .mural-selector-grid {
-      gap: 0.5em;
+    .MuiGrid-item {
+      margin: 0.5em !important;
     }
   }
 }
