--- a/packages/mural-picker/src/components/mural-picker/styles.scss
+++ b/packages/mural-picker/src/components/mural-picker/styles.scss
@@ -20,6 +20,7 @@
     justify-content: space-between;
     align-items: stretch;
     column-gap: 1em;
+    min-height: fit-content;
   }
 
   .mural-picker-select {
